--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.freemarker.template-loader-path=classpath:/templates 
+spring.freemarker.suffix=.ftl
 
+spring.profiles.include=ignore
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL;
